1. changed portfolio gallery  2. changed main font for website

--- a/css/header.css
+++ b/css/header.css
@@ -6,16 +6,20 @@
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
 .logo {
   margin-top: -5px;
   z-index: 10;
 }
+
 .menu__list {
   display: flex;
 }
+
 .menu__item+.menu__item {
   margin-left: 30px;
 }
+
 .menu__link {
   text-transform: uppercase;
   color: var(--main-text-color);
@@ -23,10 +27,12 @@
   line-height: 21px;
   transition: 0.3s;
 }
+
 .menu__link:hover {
   color: var(--brand-color);
   border-bottom: 1px solid var(--brand-color);
 }
+
 /* Start of Mobile Navigation Menu */
 .menu__btn {
   width: 30px;
@@ -37,6 +43,7 @@
   display: none;
   z-index: 10;
 }
+
 .menu__btn::after,
 .menu__btn::before {
   content: "";
@@ -46,17 +53,21 @@
   height: 2px;
   background-color: var(--brand-color);
 }
+
 .menu__btn::after {
   bottom: 0;
 }
+
 .menu__btn::before {
   top: 0;
 }
+
 .menu__btn span {
   display: block;
   height: 2px;
   background-color: var(--brand-color);
 }
+
 /* End of Mobile Navigation Menu */
 .social__list {
   display: flex;
@@ -64,15 +75,19 @@
   z-index: 10;
   padding-left: 20px;
 }
+
 .social__link path {
   transition: all .3s;
 }
+
 .social__link:hover path {
   fill: var(--brand-color);
 }
+
 .header-social__item {
   margin-right: 15px;
 }
+
 .header__content {
   background-image: url(../images/header-background.png);
   background-size: cover;
@@ -81,7 +96,9 @@
   background-color: var(--brand-color);
   min-height: 100vh;
 }
+
 .title-header {
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400;
   font-size: 60px;
   line-height: 50px;
@@ -89,6 +106,7 @@
   padding-top: 50px;
   text-align: center;
 }
+
 .subtitle-header {
   font-size: 32px;
 }
@@ -116,9 +134,11 @@
   .menu {
     margin-left: auto;
   }
+
   .menu__item+.menu__item {
     margin-left: 0;
   }
+
   .menu__link {
     display: block;
     padding: 10px 0;
@@ -128,10 +148,10 @@
   .menu__link:hover {
     border: none
   }
- }
+}
 
 @media (max-width: 768px) {
-   .header-social__item--telegram, .header-social__item--facebook {
+  .header-social__item--telegram, .header-social__item--facebook {
     display: none;
   }
 }
@@ -145,7 +165,7 @@
     margin-right: 5px;
   }
 
-   .title-header {
+  .title-header {
     font-size: 48px;
   }
 
