--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
 *, *::before, *::after {
@@ -16,10 +17,10 @@
 }
 
 body {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 20px;
-  line-height: 22px;
+  line-height: 28px;
   color: var(--main-text-color);
 }
 
@@ -68,7 +69,7 @@ a {
 }
 
 @media (max-width: 500px) {
-   .section-page {
+  .section-page {
     padding-top: 10px;
     padding-bottom: 10px;
   }
