--- a/css/footer.css
+++ b/css/footer.css
@@ -19,6 +19,7 @@
   text-align: center;
 }
 .phone {
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
   color: var(--brand-color);
 }
