--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,58 +1,27 @@
 /* SECTION PORTFOLIO GALLERY */
-.gallery__slider-box {
-  max-width: 650px;
-  position: relative;
-  margin: auto;
+
+.portfolio-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
 
-.gallery__img {
-  vertical-align: middle;
-  max-height: 450px;
+.portfolio-gallery__img {
   width: 100%;
-}
-
-/* Next and previous buttons */
-.gallery__arrow-prev, .gallery__arrow-next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 20px;
-  margin-top: -22px;
-  font-weight: 700;
-  font-size: 30px;
-  transition: 0.6s ease;
-  user-select: none;
-}
-
-.gallery__arrow-next {
-  right: -50px;
-  border-radius: 3px 0 0 3px;
-}
-
-.gallery__arrow-prev {
-  left: -50px;
-  border-radius: 0 3px 3px 0;
-}
-
-.gallery__slider-number {
-  color: var(--brand-color);
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+  max-width: 350px;
+  height: 300px;
+  object-fit: cover;
 }
 
 @media (max-width: 768px) {
-  .gallery__arrow-next {
-    right: 0;
-    color: var(--alternative-text-color);
-    padding-left: 50px;
-  }
-
-  .gallery__arrow-prev {
-    left: 0;
-    color: var(--alternative-text-color);
-    padding-right: 50px;
+  .portfolio-gallery__img {
+    max-width: 100%;
+    max-height: 100%;
   }
 }
-
